# xsd-generator

./: .gitignore  Cargo.toml  LICENSE  README.md
builtins/: Cargo.toml
builtins/src/: lib.rs  meta.rs
examples/: employee.xsd
generator/: Cargo.toml
generator/src/: cli.rs  generator.rs  ist.rs  main.rs  naming.rs
generator/src/generators/: common.rs  mod.rs  rust.rs  typescript.rs
src/: cli.rs  main.rs
src/generator/: mod.rs
src/xsd/: annotation.rs  assertion.rs  attribute_decl.rs  attribute_group_def.rs  attribute_use.rs  builtins.rs  complex_type_def.rs  components.rs  constraining_facet.rs  element_decl.rs  fundamental_facet.rs  identity_constraint_def.rs  import.rs  mapping_context.rs  mod.rs  model_group.rs  model_group_def.rs  notation_decl.rs  particle.rs  schema.rs  shared.rs  simple_type_def.rs  type_alternative.rs  values.rs  wildcard.rs  xstypes.rs
test-runner/: Cargo.toml  generate.sh
test-runner/src/: generated.rs  main.rs  parser.rs
validator/: Cargo.toml
validator/src/: cli.rs  main.rs
xsd/: Cargo.toml
xsd/src/: annotation.rs  assertion.rs  attribute_decl.rs  attribute_group_def.rs  attribute_use.rs  builtins.rs  complex_type_def.rs  components.rs  constraining_facet.rs  element_decl.rs  error.rs  fundamental_facet.rs  identity_constraint_def.rs  import.rs  lib.rs  mapping_context.rs  model_group.rs  model_group_def.rs  notation_decl.rs  particle.rs  schema.rs  shared.rs  simple_type_def.rs  state_machine.rs  type_alternative.rs  validation.rs  values.rs  wildcard.rs  xstypes.rs
