[package]
name = "dt-xsd-generator"
version = "0.1.0"
edition = "2021"
description = "Generates XML binding code from XSD schema files"

[dependencies]
dt-xsd = { path = "../xsd" }
clap = { version = "3.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
roxmltree = "0.16.0"
prettyplease = "0.1"
# needs parsing and printing for the parse_quote! macro
# TODO remove extra-traits when done
syn = { version = "1", default-features = false, features = ["full", "parsing", "printing", "extra-traits"] }
quote = "1"
