[package]
name = "dt-xsd-generator"
version = "0.1.0"
edition = "2024"
description = "Generates XML binding code from XSD schema files"

[features]
generator-rust = ["dep:syn", "dep:quote", "dep:prettyplease", "dep:check_keyword", "dep:heck"]
generator-typescript = []

default = ["generator-rust", "generator-typescript"]

[dependencies]
dt-xsd = { path = "../xsd" }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
reqwest = { version = "0.12", features = ["blocking"] }
roxmltree = "0.20"

prettyplease = { version = "0.2", optional = true }
quote = { version = "1", optional = true }
check_keyword = { version = "0.3", optional = true }
heck = { version = "0.5", optional = true }

[dependencies.syn]
version = "2"
optional = true
default-features = false
# needs parsing and printing for the parse_quote! macro
# TODO remove extra-traits when done
features = ["full", "parsing", "printing", "extra-traits"]
